
SUBDIRS = 		\
	7seg 		\
	at45db          \
	bargraph	\
	cc1100_2500	\
	cc2420		\
	ds1722		\
	ds2411		\
	gdm1602a 	\
	hd44780         \
	led 		\
	m25p80 		\
	ptty            \
	uigfx		\
	spidev          \
	spidev_master	\
	spidev_dsp	\
	cma3000_spi	\
	scp1000_i2c


noinst_LIBRARIES= libdevices.a

INCLUDES=-I$(top_srcdir)

libdevices_a_SOURCES= devices.c devices.h devices_fd.h


