
noinst_LIBRARIES=libwsnet.a

INCLUDES=-I$(top_srcdir)

libwsnet_a_SOURCES= 		\
		libwsnet.h	\
		wsnet0.h	\
		wsnet0.c	\
		wsnet1.h	\
		wsnet1.c	\
		wsnet1_dbg.h	\
		pktlist.h	\
		pktlist.c	\
		wsnet2.h	\
		wsnet2.c	\
		wsnet2_net.c	\
                wsnet2_net.h    \
		wsnet2_pkt.h 	\
		wsnet2_pkt.c    \
		wsnet2_dbg.h	\
		wsnet_wrapper.c




