
noinst_LIBRARIES=libcc1100.a

INCLUDES=-I$(top_srcdir)

CC1100=	cc1100_dev.c       cc1100_dev.h         \
	cc1100_globals.h   cc1100_internals.h   \
	cc1100_registers.c cc1100_rx.c          \
	cc1100_state.c     cc1100_strobe.c      \
	cc1100_tx.c	   cc1100_gdo.c         \
	cc1100_fifo.c	   cc1100_debug.c

libcc1100_a_CFLAGS=
libcc1100_a_SOURCES=$(CC1100)


